# macaw

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/: NOTICE.md
macaw/: Cargo.toml
macaw/assets/: NOTICE.md  stone.pxo
macaw/assets/shaders/blocks/: greedy.wgsl
macaw/src/: lib.rs  loader.rs  player.rs  renderer.rs  ui.rs  util.rs  world.rs
macaw/src/renderer/: material.rs  meshing.rs
macaw/src/ui/: fps_counter.rs
macaw/src/world/: error.rs  generation.rs
macaw/src/world/generation/: biomes.rs
macaw/src/world/generation/generators/: fixed.rs
server/: Cargo.toml
server_lib/: Cargo.toml
server_lib/src/: generation.rs  lib.rs
shared/: Cargo.toml
shared/src/: block.rs  lib.rs  util.rs  world.rs
shared/src/time/: day.rs  mod.rs  tick.rs
shared/src/world/: chunk.rs  generation.rs  loader.rs  metadata.rs  mod.rs  region.rs  save.rs
shared/src/world/coordinates/: bounding_box.rs  global.rs  local.rs  mob.rs  mod.rs
shared/src/world/generation/: biomes.rs  generators.rs  mod.rs
shared/src/world/generation/generators/: blank.rs  default.rs  fixed.rs
src/: block.rs  lib.rs  loader.rs  main.rs  player.rs  renderer.rs  ui.rs  util.rs  world.rs
src/player/: controls.rs
src/renderer/: meshing.rs  meshing_two.rs  skybox.rs
src/renderer/meshing/: greedy.rs  triangle.rs
src/ui/: fps_counter.rs  main_menu.rs  menu.rs  player_position.rs
src/ui/menu/: game_menu.rs  main_menu.rs
src/world/: chunk.rs  coordinates.rs  generation.rs  meshing.rs  save.rs
src/world/coordinates/: bounding_box.rs  global.rs  local.rs
src/world/generation/: generators.rs
src/world/generation/generators/: default.rs
