[workspace]
members = ["macaw", "server", "server_lib", "shared"]
resolver = "2"

[workspace.dependencies.bevy]
version = "0.13"
# TODO: remove dynlib if released (lol)
features = ["dynamic_linking", "bevy_audio"]


[workspace.package]
version = "0.1.0"
license = "MIT"
license-file = "LICENSE"
authors = ["Barrett Ray <contact@barretts.club>"]
edition = "2021"
repository = "https://github.com/onkoe/macaw"
homepage = "https://github.com/onkoe/macaw"
documentation = "https://github.com/onkoe/macaw"
readme = "README.md"
keywords = ["game", "voxel", "minecraft", "bevy"]
categories = ["game-engines", "game-development", "graphics", "rendering"]
description = "A voxel game aiming to target functionality matching that of Minecraft b1.7.3."

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
