[package]
name = "shared"
version.workspace = true
license-file.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
libnoise = "1.1.2"
rand = "0.8.5"
thiserror = "1.0.58"

[dependencies.bevy]
version = "0.13"
# TODO: remove dynlib if released (lol)
features = ["dynamic_linking"]

[dev-dependencies]
anyhow = "1.0"
