[package]
name = "shared"
version.workspace = true
license-file.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1.79"
directories = "5.0.1"
fraction = "0.15.1"
libnoise = "1.1.2"
rand = "0.8.5"
tempfile = "3.10.1"
thiserror = "1.0.58"
urlencoding = "2.1.3"

[dependencies.bevy]
version = "0.13"
# TODO: remove dynlib if released (lol)
features = ["dynamic_linking"]

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
